Actions
Bug #13015
closedfruaccess: comparison between pointer and zero character constant
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
fru_access.c: In function 'get_container_info': fru_access.c:716:13: error: comparison between pointer and zero character constant [-Werror=pointer-compare] if (item == '\0') { ^~ fru_access.c:716:8: note: did you mean to dereference the pointer? if (item == '\0') { ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 93d26c05275be2c44aedd16705237484fc0a0990
commit 93d26c05275be2c44aedd16705237484fc0a0990 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-08T05:53:57.000Z 13015 fruaccess: comparison between pointer and zero character constant Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions