13015 fruaccess: comparison between pointer and zero character constant Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Approved by: Dan McDonald <danmcd@joyent.com>